fix: overflow of code block on mobile

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -32,7 +32,9 @@ h4 {
 }
 
 ul {
-  padding-left: 0;
+  @include media_larger_than_mobile() {
+	padding-left: 0;
+  }
 }
 
 p, li {
