--- a/css/zenburn.css
+++ b/css/zenburn.css
@@ -5,6 +5,13 @@
 	padding: 1px 6px;
 }
 
+pre code {
+	word-wrap: break-word;
+	width: 100%;
+	display: inline-block;
+	overflow-x: auto;
+}
+
 .highlight .hll {
 	background-color:#222;
 }
